# django-template

./: README.md  cookiecutter.json
hooks/: pre_prompt.py
{{cookiecutter.project_name}}/: docker-compose-dev.yml  manage.py  pyproject.toml
{{cookiecutter.project_name}}/config/: .app-env  .postgres-env
{{cookiecutter.project_name}}/server/apps/common/: apps.py  models.py  urls.py  views.py
{{cookiecutter.project_name}}/server/settings/: urls.py  wsgi.py
{{cookiecutter.project_name}}/server/settings/components/: caches.py  common.py  logging.py
{{cookiecutter.project_name}}/server/settings/environments/: development.py  production.py
