[tool.poetry]
authors = ["{{cookiecutter.your_email}}"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
django = "4.2.13"
django-environ = "0.11.2"
django-filter = "24.2"
django-redis = "5.4.0"
django-cors-headers = "4.3.1"
django-extra-checks = "0.14.0"
django-debug-toolbar = "4.3.0"
django-health-check = "3.18.2"
djangorestframework = "3.15.1"
djangorestframework-simplejwt = "5.3.1"
drf-spectacular = "0.27.2"
drf-standardized-errors = "0.13.0"
nplusone = "1.0.0"
psycopg2-binary = "2.9.9"
pillow = "10.2.0"
markdown = "3.6"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]


[tool.poetry.group.prod.dependencies]
sentry-sdk = {extras = ["django"], version = "^2.1.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"